--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "request": "^2.88.0",
-    "sequelize": "^5.8.5"
+    "sequelize": "^5.8.5",
+    "sequelize-cli": "^5.4.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
